Nicer looking bug reports, incl wrapping

--- a/assets/css/bug-report.css
+++ b/assets/css/bug-report.css
@@ -6,5 +6,5 @@ body {overflow: hidden;
 }
 
 h1 {font-size: 36px; font-weight: normal; color: #888; margin-bottom: 20px}
-.bug-report {background-color: #1c1c19; color: #fff; padding: 20px}
-pre {font-family: monospace}
+.bug-report {padding: 20px; background: rgba(0,0,0,0.92); color: #ccc}
+pre {font-family: monospace, courier, sans-serif;; white-space: pre-wrap; word-break: break-all}
